--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -10,7 +10,7 @@ layout: frontpage
     <table class="table table-striped">
       <thead>
         <tr style="padding: 1.5rem; text-align: left; height: 45px;">
-            <th scope="col">ID</th>
+            <th scope="col">{{site.data}}</th>
             <th scope="col">Indicator title</th>
             <th scope="col">Data Source</th>
         </tr>
