--- a/_layouts/indicator_map16.html
+++ b/_layouts/indicator_map16.html
@@ -70,7 +70,7 @@ layout: frontpage
     <div role="tabpanel" class="tab-pane active" id="data">
           <div style="display: flow-root;margin-top: 15px;">
                 <div id="title" style="text-align: center"><h3>Austria movements</h3></div>
-                <div id="chartdiv" style="margin-top: 29px;"><figure><img src="/assets/img/mp/Austria.png" id="image1" style="width: 100%;cursor: pointer;"></figure></div>
+                <div id="chartdiv" style="margin-top: 29px;"><figure><img src="{{site.baseurl}}/assets/img/mp/Austria.png" id="image1" style="width: 100%;cursor: pointer;"></figure></div>
                 <div id="chartdiv2"></div>
 
                 <div id="myModal" class="modal">
