--- a/_layouts/indicator_map17.html
+++ b/_layouts/indicator_map17.html
@@ -70,7 +70,7 @@ layout: frontpage
     <div role="tabpanel" class="tab-pane active" id="data">
           <div style="display: flow-root;margin-top: 15px;">
                 <div id="title" style="text-align: center"><h3>Transboundary movements</h3></div>
-                <div id="chartdiva" style="margin-top: 29px;"><figure><img src="/assets/img/mp/ses.gif" id="image1" style="width: 100%;cursor: pointer;"></figure></div>
+                <div id="chartdiva" style="margin-top: 29px;"><figure><img src="{{site.baseurl}}/assets/img/mp/ses.gif" id="image1" style="width: 100%;cursor: pointer;"></figure></div>
 
                 <div id="myModal" class="modal">
                 <span class="close">&times;</span>
